# CMakeList.txt: projekt CMake dla elementu ArithmeticExpressionsParser, dołącz źródło i zdefiniuj
# tutaj logikę specyficzną dla projektu.
#
cmake_minimum_required (VERSION 3.8)

project ("ArithmeticExpressionsParser")

# Dodaj źródło do pliku wykonywalnego tego projektu.
add_executable (ArithmeticExpressionsParser "main.cpp" )

# TODO: Dodaj testy i zainstaluj elementy docelowe w razie potrzeby.
